--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -34,8 +34,9 @@
       <div class="header__logo">
         <a href="{{ routes.root_url }}" aria-label="{{ shop.name }}">
           {%- if settings.logo != blank -%}
+            {%- assign logo_width_2x = settings.logo_max_width | times: 2 -%}
             <img
-              src="{{ settings.logo | image_url: width: settings.logo_max_width | times: 2 }}"
+              src="{{ settings.logo | image_url: width: logo_width_2x }}"
               alt="{{ settings.logo.alt | default: shop.name | escape }}"
               width="{{ settings.logo_max_width }}"
               height="{{ settings.logo_max_width | divided_by: settings.logo.aspect_ratio }}"
